--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+QuanticsGrids = "634c7f73-3e90-4749-a1bd-001b8efc642d"
 
 [targets]
-test = ["Test"]
+test = ["Test", "QuanticsGrids"]
