--- a/Project.toml
+++ b/Project.toml
@@ -8,11 +8,12 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 TensorCrossInterpolation = "b261b2ec-6378-4871-b32e-9173bb050604"
 
 [compat]
+TensorCrossInterpolation = "0.9"
 julia = "1.8"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 QuanticsGrids = "634c7f73-3e90-4749-a1bd-001b8efc642d"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test", "QuanticsGrids"]
