--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,14 @@
 name = "PolynomialQTT"
 uuid = "87f1ea11-1d4d-47cb-b1d1-07788fc25290"
-authors = ["Ritter.Marc <Ritter.Marc@physik.uni-muenchen.de> and contributors"]
 version = "0.1.0"
+authors = ["Ritter.Marc <Ritter.Marc@physik.uni-muenchen.de> and contributors"]
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 TensorCrossInterpolation = "b261b2ec-6378-4871-b32e-9173bb050604"
 
 [compat]
+LinearAlgebra = "1.12.0"
 TensorCrossInterpolation = "0.9"
 julia = "1.8"
 
